force-app/main/default/objects/AVO_Condition_Template__c/AVO_Condition_Template__c.object-meta.xml
<CustomObject>
    <label>Condition Template</label>
    <nameField>
        <label>Condition Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Condition Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>