force-app/main/default/objects/AVO_Condition_Template__c/fields/AVO_Permit_Statuses__c.field-meta.xml
<CustomField>
    <fullName>AVO_Permit_Statuses__c</fullName>
    <label>Permit Statuses</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVO_Permit_Status</valueSetName>
    </valueSet>
</CustomField>