force-app/main/default/objects/AVO_Condition_Template__c/fields/AVO_Permit_Types__c.field-meta.xml
<CustomField>
    <fullName>AVO_Permit_Types__c</fullName>
    <label>Permit Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Avo_Permit_Type</valueSetName>
    </valueSet>
</CustomField>