force-app/main/default/objects/AVO_Condition_Template__c/fields/AVO_Special_Condition__c.field-meta.xml
<CustomField>
    <fullName>AVO_Special_Condition__c</fullName>
    <label>Special Condition</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>