force-app/main/default/objects/AVO_Condition_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AVO_Permit_Types__c</columns>
    <columns>AVO_Permit_Statuses__c</columns>
    <columns>AVO_Special_Condition_Category__c</columns>
    <columns>AVO_Special_Condition__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>